added better docker container